# ClassPerformanceDifferencesUOD

./: .gitignore  README.md
classification_study/cls_datasets/balanced_data/: README.md
classification_study/cls_datasets/imbalanced_data/: README.md
classification_study/cls_datasets/one_class_reduced/: README.md
classification_study/cls_models/: balanced_data_model.py  imbalanced_data_model.py  reduced_class_model.py  weighted_sampling_model.py
localization_study/loc_datasets/balanced_data/: README.md
localization_study/loc_datasets/reduced_data/: README.md
localization_study/loc_datasets/single_class_DUO/: README.md
localization_study/loc_evaluation_scripts/: loc_bbox_metrics.py  loc_tide_errors.py
localization_study/loc_evaluation_scripts/ground_truths/: patched_k6nx_b1l.json
localization_study/loc_models/: pixi.toml  pyproject.toml
localization_study/loc_models/scripts/: .smbdeleteAAA20003689701f17b  .smbdeleteAAA20003689701f220  YOLO11_DUO_test.py  YOLO11_DUO_train.py  YOLO11_balanced_test.py  YOLO11_balanced_train.py  YOLO11_reduced_test.py  YOLO11_reduced_train.py
localization_study/loc_models/src/yolo11_object_detection.egg-info/: PKG-INFO  SOURCES.txt
