[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo11_object_detection"
version = "0.1.0"
description = "Project for Melanie Wille's Bachelor thesis on object detection underwater"

authors = [
    {name = "Melanie Wille", email = "your.email@example.com"},
    {name = "Tobias Fischer", email = "tobias.fischer@qut.edu.au"},
    {name = "Scarlett Raine", email = "sg.raine@qut.edu.au"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[tool.setuptools]
package-dir = {"" = "src"}
